@@ -19,7 +19,7 @@
         </os>
       </activation>
       <properties>
-        <ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread</ui.test.vmargs>
+        <ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread -Xmx4g -XX:MaxPermSize=1g</ui.test.vmargs>
         <argLine>${ui.test.vmargs}</argLine>
       </properties>
     </profile>
@@ -33,7 +33,7 @@
       </activation>
       <properties>
         <ui.test.vmargs>${tycho.testArgLine}</ui.test.vmargs>
-        <argLine>${ui.test.vmargs}</argLine>
+        <argLine>${ui.test.vmargs} -Xmx4g -XX:MaxPermSize=1g</argLine>
       </properties>
     </profile>
   </profiles>
